# Lab1-Graphics

./: .gitignore  AplicationController.cpp  Application.cpp  ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  CMakePresets.json  CameraController.cpp  CameraController.h  DynamicShapeArray.cpp  DynamicShapeArray.h  GLSLShader.cpp  GLSLShader.h  InputController.cpp  InputController.h  Lab1Graphics.sln  Lab1Graphics.vcxproj  Lab1Graphics.vcxproj.filters  OpenGLRenderer.cpp  OpenGLRenderer.h  README.md  Renderer.h  Shader.cpp  Shader.h  Shader.shader  ShaderCompiler.cpp  ShaderCompiler.h  Shape.h  ShapeFactory.cpp  ShapeFactory.h  batch_common.slang  batch_shader.slang  common.slang  copy_dlls.bat  dependencies.txt  obj_shader.frag  obj_shader.slang  obj_shader.vert  obj_shader_fs.spv  obj_shader_vs.spv  (+2 more)
Dependencies/: dependencies.txt
Imported Code/: sphere.cpp  sphere.py  spherefunc.cpp
Lab1Graphics/x64/Debug/: Lab1Graphics.exe.recipe  vc143.idb
Lab1Graphics/x64/Debug/Lab1Graphics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab1Graphics.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/: application.obj.enc
